--- a/manuscripts/24-jb-dags/24-jb-dags.qmd
+++ b/manuscripts/24-jb-dags/24-jb-dags.qmd
@@ -172,7 +172,7 @@ That individual causal effects cannot be identified from observations is known a
 
 Although it is not typically feasible to compute individual causal effects. under certain assumptions, it may be possible to estimate *average* treatment effects -- also called 'marginal effects.'  We define an average treatment effect ($ATE$) as the difference between the expected or average outcomes under treatment and contrast conditions for a pre-specified population, typically the population from which an observed sample is drawn.
 
-Consider a binary treatment, $A$ \in \{0,1\}$:
+Consider a binary treatment, $A \in \{0,1\}$
 
 $$
 \text{Average Treatment Effect}  = \mathbb{E}[Y(1)] - \mathbb{E}[Y(0)].
@@ -188,27 +188,27 @@ $$
 Randomisation allows investigators to recover the treatment group averages even though treatment groups contain inherently missing observations. We do not require the joint distribution over the full-data (i.e. the counterfactual data) to obtain average treatment groups. This is because when investigators randomise units into treatment conditions, there is full adherence, and the sample is sufficiently large to rule out chance differences in the composition of the treatment groups to be compared, the distributions of confounders that could explain differences in the potential outcomes will be balanced across the conditions. Randomisation under such conditions rules out explanations for difference in treatment group average except the treatment. Put differently randomisation implies:
 
 $$
-\widehat{\mathbb{E}}[Y(0) | A = 1] = \widehat{\mathbb{E}}[Y(0) | A = 0]
+\mathbb{E}[Y(0) | A = 1] = \mathbb{E}[Y(0) | A = 0]
 $$
 
 and
 
 $$
-\widehat{\mathbb{E}}[Y(1) | A = 1] = \widehat{\mathbb{E}}[Y(1) | A = 0]
+\mathbb{E}[Y(1) | A = 1] = \mathbb{E}[Y(1) | A = 0]
 $$
 
 We assume, (by causal consistency, see: $\S 1.2.1$):
 
-$$\widehat{\mathbb{E}}[Y(1) | A = 1] = \widehat{\mathbb{E}}[Y| A = 1]$$
+$$ \mathbb{E}[Y(1) | A = 1] = \mathbb{E}[Y| A = 1]$$
 
 and
 
-$$\widehat{\mathbb{E}}[Y(0) | A = 0] = {\mathbb{E}}[Y| A = 0]$$
+$$\mathbb{E}[Y(0) | A = 0] = \mathbb{E}[Y| A = 0]$$
 
 It follows that the average treatment effect of the randomised experiment can be computed:
 
 $$
-\text{The Average Treatment Effect} = {\mathbb{E}}[Y | A = 1] - \widehat{\mathbb{E}}[Y | A = 0].
+\text{The Average Treatment Effect} = \widehat{\mathbb{E}}[Y | A = 1] - \widehat{\mathbb{E}}[Y | A = 0].
 $$
 
 There are four critical aspects for how ideally randomised experiments enable the estimation of average treatment effects worth highlighting.
@@ -268,7 +268,7 @@ Y_i(a) & \text{if } A_i = a
 \end{cases}
 $$
 
-The causal consistency assumption implies that the observed outcome at a specific exposure level equates to the counterfactual outcome for that individual at the observed exposure level. Although it seems straightforward to equate an individual's observed outcome with their counterfactual outcome, treatment conditions vary, and treatment heterogeneity poses considerable challenges for satisfying this assumption. See: **Appendix A**
+The causal consistency assumption implies that the observed outcome at a specific exposure level equates to the counterfactual outcome for that individual at the observed exposure level. Although it seems straightforward to equate an individual's observed outcome with their counterfactual outcome, treatment conditions vary, and treatment heterogeneity poses considerable challenges for satisfying this assumption. See: **Appendix A** for further discussion of how investigators may obtain statisfy causal consistency in real-world settings. 
 
 
 
@@ -294,55 +294,48 @@ There are two types of positivity violation:
     implausible by nature. For instance, a hysterectomy in biological
     males would appear biologically implausible.
 
-Satisfying the positivity assumption can present considerable data
-challenges [@westreich2010]. Suppose we had access to extensive panel
-data that has tracked 20,000 individuals randomly sampled from the
-target population over three years. Suppose further that we wanted to
-estimate a one-year causal effect of weekly religious service attendance
-on charitable donations. We control for baseline attendance to recover
-an incident exposure effect estimate (see: $\S 2.3$ and **Appendix 2**).
-Assume that the natural transition rate from no religious service
-attendance to weekly service attendance is low, say one in a thousand
-annually. In that case, the effective sample for the treatment condition
-dwindles to 20. This example clarifies the problem. For rare exposures,
-the data required for valid causal contrasts may be sparse, even in
-large datasets. Where the positivity assumption is violated, causal
-diagrams will be of limited utility because observations in the data do
-not support valid causal inferences. (**Appendix 1** develops a worked
-example that illustrates the difficulty of satisfying this assumption in
-a setting of a cultural evolutionary question.)
+Satisfying the positivity assumption can present considerable data challenges [@westreich2010]. Suppose we had access to extensive panel data that has tracked 20,000 individuals randomly sampled from the target population over three years. Suppose further that we wanted to estimate a one-year causal effect of weekly religious service attendance on charitable donations. We control for baseline attendance to recover an incident exposure effect estimate. Assume that the natural transition rate from no religious service attendance to weekly service attendance is low, say one in a thousand annually. In that case, the effective sample for the treatment condition dwindles to 20. This example clarifies the problem. For rare exposures, the data required for valid causal contrasts may be sparse, even in large datasets. Where the positivity assumption is violated, causal diagrams will be of limited utility because observations in the data do not support valid causal inferences. (**Appendix B** presents a worked
+example that illustrates the difficulty of satisfying this assumption in a setting of a cultural evolutionary questions.)
 
 
-#### 1.2.3 Assumption 3: Conditional Exchangeability (no unmeasured confounding)
+#### 1.2.3 Assumption 3: Conditional Exchangeability (or no unmeasured confounding or conditional ignorability)
 
-We satisfy the conditional exchangeability assumption if the treatment
-groups are conditionally balanced in the variables that could affect the
-potential outcomes. In experimental designs, random assignment
-facilitates satisfaction of the conditional exchangeability assumption.
-In observational studies more effort is required. We must control for
-any covariate that could account for observed correlations between $A$
-and $Y$ in the absence of a causal effect of $A$ on $Y$.
+We satisfy the conditional exchangeability assumption if the treatment groups are conditionally balanced in the variables that could affect the potential outcomes. In experimental designs, random assignment facilitates satisfaction of the conditional exchangeability assumption. In observational studies more effort is required. We must control for any covariate that could account for observed correlations between $A$ and $Y$ in the absence of a causal effect of $A$ on $Y$.
 
-Let $\coprod$ again denote independence. Let $L$ denote the set of
-covariates necessary to ensure this conditional independence. We satisfy
-conditional exchangeability when:
+Let $\coprod$ again denote independence. Let $L$ denote the set of covariates necessary to ensure this conditional independence. We satisfy conditional exchangeability when:
 
 $$
 Y(a) \coprod A | L \quad \text{or equivalently} \quad A \coprod Y(a) | L
 $$
 
-Assuming conditional exchangeability is satisfied and the other
-assumptions required for consistent causal inference also hold, we may
-compute the average treatment effect (ATE) on the difference scale:
+Assuming conditional exchangeability is satisfied and the other assumptions required for consistent causal inference also hold, we may compute the average treatment effect (ATE) on the difference scale:
 
 $$
-ATE = \mathbb{E}[Y(1) | L] - \mathbb{E}[Y(0) | L]
+\text{Average Treatment Effect} = \mathbb{E}[Y(1) | L] - \mathbb{E}[Y(0) | L]
 $$
 
 
 Note that in randomised controlled experiments, exchangeability is unconditional. Although adjustment by interacting the treatment with pre-treatment variables may improve efficiency and diminish threats to randomisation from chance inbalances in measured covariates, it is a confusion to think of such adjustment as "control." 
 
-In the disciplines of cultural evolution, where experimental control is impractical and we are left with "real-world" data, obtaining consistent causal inferences hinge on the plausibility of satisfying this 'no unmeasured confounding' assumption (see: **Appendix A**). In **Appendix B** I describe assumptions and wordlfows that occur downstream of these three fundamental assumptions of causal inference. 
+In "real-world" observational studies, where measured confounders are sufficient to ensure conditional exchangeability, we obtain obtain estimates for the average treatment effect by conditioning on the densities of measured confounders by treatment group. Where $A=a$ and $A = a^*$ are the treatment levels we seek to contrast:
+
+
+$$
+\widehat{\text{ATE}} =  \sum_l \big( \mathbb{E}[Y(a^*) \mid L] - \mathbb{E}[Y(a) \mid L] \big) \times Pr(L)
+$$
+
+
+Which gives by causal consistency gives us:
+$$
+\widehat{\text{ATE}} =  \sum_l \big( \mathbb{E}[Y \mid A = a^*, L] - \mathbb{E}[Y \mid A = a, L] \big) \times Pr(L)
+$$ ^[note]
+
+
+[note]: For continuous covariates $L$, we have: $$\widehat{\text{ATE}} =  \sum_l \big( \mathbb{E}[Y(a^*) \mid L] - \mathbb{E}[Y(a) \mid L] \big) \times Pr(L)$$ and $$\widehat{\text{ATE}} = \int \big( \mathbb{E}[Y\mid A = a^*, L] - \mathbb{E}[Y\mid A = a, L] \big) dP(L)$$
+
+
+
+In the disciplines of cultural evolution, where experimental control is impractical and we are left with "real-world" data, obtaining consistent causal inferences hinge on the plausibility of satisfying this 'no unmeasured confounding' assumption. In **Appendix B**  I describe challenges for inferring causal effects from historical data. 
 
 However these assumptions occur down stream from the primary functions of causal directed acyclic graphs, which we now ready to state: 
 
@@ -386,7 +379,7 @@ The concept of "confounding bias" helps to clarify what it is at stake when eval
 
 
 
-## Part 2 Causal Directed Acyclic Graphs
+## Part 2 Part 2: How Causal Directed Acyclic Graphs Clarify Identification
 
 We introduce causal directed acyclic graphs by describing the meaning of our symbols.
 
@@ -614,25 +607,25 @@ We denote the set of all ancestors of a node $C$ as $\text{An}(C)$, and the set 
 
  In a causal directed acyclic graph, we apply identifictation rules to evaluate the implications of structural assumptions encoded in a causal graph for consistently estimating the causal effects of pre-specified interventions on nodes.  -->
 
-#### Bayesian Network Factorisation and The Local Markov Assumption
+#### Markov Factorisation and The Local Markov Assumption
 
-@pearl2009a p 52 asks us to imagine the following. Suppose we have a distribution P defined on n discrete variables, $X_1, X_2,  \dots, X_n$.  By the chain rule, the joint distribution for variables $X_1, X_2, \dots, X_n$ on graph can be decomposed into the product of $n$ conditional distributions such that: 
+@pearl2009a p 52 asks us to imagine the following. Suppose we have a distribution $\mathcal{P}$ defined on n discrete variables, $X_1, X_2,  \dots, X_n$.  By the chain rule, the joint distribution for variables $X_1, X_2, \dots, X_n$ on graph can be decomposed into the product of $n$ conditional distributions such that we may obtain the following factorisation:
 
 $$
-P(x_1, \dots, x_n) = \prod_{j=1}^n P(x_j \mid x_1, \dots, x_{j-1})
+\Pr(x_1, \dots, x_n) = \prod_{j=1}^n \Pr(x_j \mid x_1, \dots, x_{j-1})
 $$
 
 
-This factorisation of a graph is called Bayesian Network Factorisation.  We translate nodes and edges on a graph into a set of conditional independences that a graph implies over the distributions represented in the notes on a graph. 
+We translate nodes and edges on a graph into a set of conditional independences that a graph implies over statistical distributions. 
  
  
- According to **the local Markov assumption,** given its parents in a directed acyclic graph, a node is said to be independent of all its non-descendants:
+ According to **the local Markov assumption,** given its parents in a directed acyclic graph, a node is said to be independent of all its non-descendants. Under this assumption we obtain what Pearl calls Bayesian network factorisation, such that:
 
 $$
-P(x_j \mid x_1, \dots, x_{j-1}) = P(x_j \mid \text{pa}_j)
+\Pr(x_j \mid x_1, \dots, x_{j-1}) = \Pr(x_j \mid \text{pa}_j)
 $$
 
-This factorisation simplifies the calculation of the joint distributions encoded in the directed acyclic graph (causal or non-causal) by reducing complex factorisations of the conditional distributions in $P$ to simpler conditional distributions in the set $\text{PA}_j$, represented in the structural elements of a directed acyclic graph [@lauritzen1990; @pearl1988; @pearl1995; @pearl2009a].
+This factorisation greatly simplifies the calculation of the joint distributions encoded in the directed acyclic graph (causal or non-causal) by reducing complex factorisations of the conditional distributions in $\mathcal{P}$ to simpler conditional distributions in the set $\text{PA}_j$, represented in the structural elements of a directed acyclic graph [@lauritzen1990; @pearl1988; @pearl1995; @pearl2009a].
 
 #### Minimality Assumption
 
@@ -648,7 +641,7 @@ The **compatibility assumption** ensures that the joint distribution of variable
 
 #### Faithfulness
 
-**Faithfulness** complements the local Markov assumption and Bayesian Network factorisation in causal diagrams. A causal diagram is considered faithful to a given set of data if all the conditional independencies present in the data are accurately depicted in the graph. Conversely, the graph is faithful if every dependency implied by the graph's structure can be observed in the data [@hernan2024]. This concept ensures that the graphical representation of relationships between variables aligns with empirical evidence [@pearl2009a].
+**Faithfulness** complements Markov Factorisation in causal diagrams. A causal diagram is considered faithful to a given set of data if all the conditional independencies present in the data are accurately depicted in the graph. Conversely, the graph is faithful if every dependency implied by the graph's structure can be observed in the data [@hernan2024WHATIF]. This concept ensures that the graphical representation of relationships between variables aligns with empirical evidence [@pearl2009a].
 
 The distinction between **weak faithfulness** and **strong faithfulness** addresses the nature of observed independencies:
 
@@ -672,24 +665,39 @@ c. **Collider rule** ($A \rightarrowred \boxed{B} \leftarrowred C$): $A$ and $C$
 According to these rules:
 
 1. An open path (no variables conditioned on) is blocked only if two arrows point to the same node: $A \rightarrowred B \leftarrowred C$. The node of common effect is called a *collider*.
-2. Conditioning on a collider does not block a path, such that $A \rightarrowred \boxed{B} \leftarrowred C$may suggest an association of $A$ with $C$ in the absence of causation.
+2. Conditioning on a collider does not block a path, such that $A \rightarrowred \boxed{B} \leftarrowred C$ may suggest an association of $A$ with $C$ in the absence of causation.
 3. Conditioning on a descendant of a collider does not block a path, such that if $L \rightarrowred \boxed{B'}$, then $A \rightarrowred \boxed{B'} \leftarrowred C$ is open.
-4. If a path does not contain a collider, any variable conditioned along the path is blocked, such that $A \rightarrowdotted \boxed{B} \rightarrowdotted C$blocks the path from $A \rightarrowdotted C$[@hernan2023, p. 78].
+4. If a path does not contain a collider, any variable conditioned along the path is blocked, such that $A \rightarrowdotted \boxed{B} \rightarrowdotted C$ blocks the path from $A \rightarrowdotted C$ [@hernan2023, p. 78].
 
-#### The Backdoor Path Criterion
+#### 2.6 The Backdoor Path Criterion and Backdoor Path Adjustment
 
-To obtain an unbiased estimate for the causal effect of $A$on $C$, we need to block all backdoor paths. We do this by conditioning on a set of covariates $B$that is sufficient to close all backdoor paths linking $A$and $C$. A path is effectively blocked by $B$if it includes at least one non-collider that is a member of $B$, or if it does not contain any collider or descendants of a collider.
+To obtain an unbiased estimate for the causal effect of $A$ on $C$, we need to block all backdoor paths. We do this by conditioning on a set of covariates $B$that is sufficient to close all backdoor paths linking $A$and $C$. A path is effectively blocked by $B$if it includes at least one non-collider that is a member of $B$, or if it does not contain any collider or descendants of a collider.
 
-Pearl defines this criterion more generally as follows: a set of variables $Z$ satisfies the backdoor criterion relative to variables $X_i$and $X_j$ in a causal directed acyclic graph $\mathcal{G}$ if: 
+@pearl2009a (p.173) defines this criterion more generally as follows: a set of variables $Z$ satisfies the backdoor criterion relative to variables $X_i$ and $X_j$ in a causal directed acyclic graph $\mathcal{G}$ if: 
 
-1. No node in $Z$ is a descendant of $X_i$; and 
-2. $Z$ blocks every path between $X_i$and $X_j$that contains an arrow into $X_i$.
+1. No node in $Z$ is a descendant of $X_i$.
+2. $Z$ blocks every path between $X_i$ and $X_j$ that includes an arrow pointing into $X_i$.
 
-Similarly, if $X$and $Y$ are two disjoint subsets of nodes in $\mathcal{G}$, then $Z$ satisfies the backdoor criterion relative to $(X, Y)$ if it satisfies the criterion relative to any pair $(X_i, X_j)$ such that $X_i \in X$ and $X_j \in Y$. The name "backdoor" refers to condition (2), which requires that only paths with arrows pointing at $X_i$ be blocked; these paths can be viewed as entering $X_i$ through the back door.
+Furthermore, we say that if $X$ and $Y$ are two disjoint subsets of nodes in $\mathcal{G}$, then $Z$ meets the backdoor criterion relative to $(X, Y)$ if it meets the criteria for any pair $(X_i, X_j)$ where $X_i \in X$ and $X_j \in Y$ (@pear2009a, p 173).
 
-The backdoor criterion uses the rules of d-separation to identify and block all paths in a causal diagram that could introduce bias between a treatment (or exposure), $A$, and an outcome, $C$, in the absence of causation [@pearl2009a].
+The name "backdoor" refers to condition (2), which requires that only paths with arrows pointing at $X_i$ be blocked; these paths can be viewed as entering $X_i$ through the back door.
 
-#### Frontdoor Path Criterion
+The backdoor criterion uses the rules of d-separation to identify and block all paths in a causal diagram that could introduce bias between a treatment (or exposure), $A$, and an outcome, $C$, in the absence of causation [@pearl2009a, p173]. 
+
+The backdoor path criterion gives rise to the "backdoor path adjustment" theorem, such that if a set of variables $Z$ satisfies the backdoor criterion relative to $(X, Y)$ the causal effect of $X$ on $Y$ is identifiable given the formula:
+
+$$ \Pr(y|\hat{x}) = \sum_z \Pr(y|x,z) \times \Pr(z))$$ 
+
+
+Pearl's backdoor path adjustment theorem should look familiar.  Substituting our notation where $A$ is the treatment (a random variable) and $L$ denotes measured confounders sufficient to for ignorable treatment assigment (also random variables), we may compute causal contrasts using Pearl's backdoor path adjustment theorem using the standardisation formula:  
+
+$$
+\widehat{\text{ATE}} =  \sum_l \big( \mathbb{E}[Y \mid A = a^*, L] - \mathbb{E}[Y \mid A = a, L] \big) \times Pr(L)
+$$ ^[note]
+
+
+
+#### 2.7 Frontdoor Path Criterion
 
 To obtain an unbiased estimate for the causal effect of $A$ on $C$ using the frontdoor criterion, we need to identify a set of variables $M$ that mediates the effect of $A$ on $C$. 
 
@@ -705,9 +713,7 @@ In other words, $B$ must be an intermediate variable that captures the entire ca
 The frontdoor criterion is less widely used compared to the backdoor criterion because it requires the identification of an appropriate mediator that fully captures the causal effect [@pearl2009a].  Here, we state the frontdoor path criterion for completeness. 
 
 
-
-
-### 2.6 Comment on Pearl's Do-Calculus versus the Potential Outcomes Framework
+### 2.8 Comment on Pearl's Do-Calculus versus the Potential Outcomes Framework
 
  Here, we have developed counterfactual contrasts using the potential outcomes framework, Pearl develops counterfactual contrasts using operations on structural functionals, referred to as "do-calculus"  (Appendix E.) In practice, whether one uses the do-calculus (and the non-parametric structural equation models it relies on) or the potential outcomes framework to interpret causal inferences is typically irrelevant to identification results. However, there are theoretically interesting debates about edge cases.
 
@@ -716,7 +722,7 @@ In some cases, Pearl's non-parametric structural equation models permit the iden
 I have presented the potential outcomes framework because it is easier to interpret. Moreover, one does not need to be a verificationist to adopt it. For most practical purposes, the two frameworks are equivalent in terms of their utility for causal inference. Furthermore, readers should be aware that there are causal diagrams called "Single World Intervention Graphs" which enable investigators to represent conditional independences of potential outcomes on graphs [@richardson2013swigsprimer], which can be useful. 
 
 
- ### 2.7 The Five Elementary Structures of Causality Encoded In Causal Directed Acyclic Graphs
+ ### 2.9 The Five Elementary Structures of Causality Encoded In Causal Directed Acyclic Graphs
 
 
 ::: {#tbl-fiveelementary}
@@ -748,7 +754,7 @@ Understanding the basic relationships between two variables allows us to build u
 {{< pagebreak >}}
 
 
-### 2.8 The Five Fundamental Rules of Confounding Control
+### 2.10 The Five Fundamental Rules of Confounding Control
 
 @tbl-terminologyconfounders describe five elementary rules of confounding control:
 
@@ -782,10 +788,16 @@ Note further that to estimate a causal effect of $Y$ on $A$ we would focus on: $
 {{< pagebreak >}}
 
 
-## Part 3.  Use Cases 
+### Summary Part 2
 
 
-### 3.1 Direct Acyclic Graphs Reveal The Importance of Timing for Identification
+We use causal directed acyclic graphs to represent and evalaute structural sources of bias. We do not use these causal graphs to represent the the entirity of the causal system in which we are interested, but rather only those features necessary to evaluate conditional exchangeabilty, or equivalently to evaluate d-separation.  Moreover, causal directed acyclic graphs should not be confused with the structural equation models employed in the statistical structural equation modelling traditions.  Although Pearl's formalism is built upon "Non-Parametric Structural Equation Models", the term "Structural Equation Model" is a false cognate. Causal graphs are structural models, not statistical models. We create causal graphs before we embark on statistical modelling. Their purpose is to clarify how to write statistical models by eludicating which variables we must include in our statistical models and equally important, which variables we must exclude from our statistical models to avoid invalidating our causal inferences.  All causal graph are grounded in our assumptions about the structures of causation. Although it is sometimes possible to use causal diagrams for causal discovery, their primary (and original) use is to evaluate the implications of assumptions. 
+
+This distinction between structural and statistical models is fundamental because absent clearly defined causal contrasts and carefully evaluated assumptions about structural sources of bias, the statistical structural equation modelling tradition offers no guarantees that the coefficients investigators recover are interpretable. Misunderstanding this difference between structural and statistical models has led to considerable confusion across the human sciences [@vanderweele2015; @vanderweele2022; @vanderweele2022b; @bulbulia2022.]
+
+
+## Part 3. How Causal Directed Acyclic Graphs Clarify The Importance of Timing of Events Recorded in Data
+
 
 ::: {#tbl-elementary-chronological-hyg}
 ```{=latex}
@@ -795,10 +807,86 @@ Note further that to estimate a causal effect of $Y$ on $A$ we would focus on: $
 
 As hinted at in the previous section, the five elementary rules of confounding control reveal the importance of ensuring accurate timing in the occurance of the variables whose structural features a causal directed acyclic graph encodes. We begin by consider seven examples of confounding problems resolved when such accuracy is ensured. 
 
+The first seven case-studies illustrate the focus that causal directed acyclic graphs bring to fundmental imperative to ensure accurate timing in the chronology of events recorded in data.  These illustrations refer to causal graph in @tbl-elementary-chronological-hyg
+
+
+### 3.1 Reverse Causation
+
+### 3.2 Confounding by Common Cause
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 3.1$ illustrates confounding by common cause. Suppose there is a common cause, $L$, of the exposure, $A$, and outcome, $Y$. In this setting, $L$ may create a statistical association between $A$ and $Y$, implying causation in its absence. Most human scientists will be familiar of the threat to inference in this setting: a "third variable" leads to association without causation. 
+
+Consider an example where smoking, $L$, is a common cause of both yellow fingers, $A$, and cancer, $Y$. Here, $A$ and $Y$ may show an association without causation. If investigators were to scrub the hands of smokers, this would not affect cancer rates.
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 3.2$ clarifies a response.  Condition on the common cause. Were investigators to condition on smoking, there would be no association between yellow fingers and cancer. 
+
+### 3.3 Mediator Bias
+
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 3.1$ illustrates mediator bias. Conditioning on the effect of a treatment in this graph partially blocks the flow of information from treatment to outcome, biasing the total effect estimate.
+
+Suppose investigators are interested in whether cultural 'beliefs in big Gods' $A$ affect social complexity $Y$. Suppose that 'economic trade', $L$ is both a common cause of the treatment and outcome. To address confounding by common cause we must condition on economic trade.  However, timing matters. If we condition on measurements that reflect economic trade after the emergence of beliefs in big Gods, we may bias our total effect estimate.
+
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 3.2$ clarifies a response. Ensure that measurements of economic trade are obtained for cultural histories before big-Gods arise.  Do not condition on post-treatment instances of economic trade.
+
+
+### 3.4 Collider Bias
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 4.1$ illustrates collider bias. Imagine a randomised experiment investigating the effects of different settings on individuals' self-rated health. In this study, participants are assigned to either civic settings (e.g., community centres) or religious settings (e.g., places of worship). The exposure of interest, $A$, is the type of setting, and the outcome, $Y$, is self-rated health. Suppose there is no effect of setting on self-rated health. However, suppose both setting and rated health independently influence a third variable: cooperativeness. Specifically, imagine religious settings encourage cooperative behaviour, and at the same time, individuals with better self-rated health are more likely to engage cooperatively. Now suppose the investigators decide to condition on cooperativeness, which in reality is the common effect of an $A$, and the outcome $Y$. Their rational might be to study the effects of setting on health among those who are more cooperative, or perhaps to 'control for' cooperation in the health effects of religious setting. By introducing such 'control' the investigators would inadvertently introduce collider bias, because the control variable is a common effect of the exposure and the outcome.
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 4.2$ clarifies a response. If the worry is that cooperativeness is a confounder, ensure that cooperativeness is measured before the intiation of exposures to religious settings. Note that in experimental settings investigators do not have this worry, assuming randomisation succeeds and samples are large.  However, conditioning on a variable that is associated with the outcome may improve estimation efficiency, and safegaurds against random imbalance owing to sampling variability.
 
 
 
-## 3.2  Collecting Time Series Data is Insufficient for Identification
+### 3.5 Collider Proxy Bias
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 5.1$ illustrates bias from conditioning on the proxy of a collider. Consider again the scenario described in $\sec 3.4$, however in place of controlling for cooperativeness investigators control for charitable donations, a proxy for cooperativeness. Here, because the control variable is a decendant of a collider, conditioning on the proxy is akin to conditioning on the the collider.
+
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 5.2$ clarifies a response. Do not condition on the effect of treatment. 
+
+### 3.6 Post-Treatment Collider Stratification Bias
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 6.1$ illustrates post-treatment collider stratification bias. Consider a gain an experiment investigating the effect of religious service on self-rated health.  Suppose we measure "religiosity" after the experiment, although with other demographic data. Suppose further that religious setting affects religiosity, as does an unmeasured confounder, such as child-hood deprivation.  Suppose that childhood deprivation affects self-reported health.  Although our experiment ensured randomisation of the treatment, and therefore ensured there no-unmeasured common cause of the treatment and outcome, conditioning on the post-treatment variable "religiosity" opens a back-door path from the treatment to the outcome. This path is $A_0 \association L_1 \association U \association Y_2$. We introduced confounding into our randomised experiment.
+
+
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 6.2$ clarifies a response. Do not condition on a variable that the treatment may effect. (refer to @cole2010 for theoretical examples; refer to @montgomery2018 for evidence of widespread prevalence of post-treatment adjustment in political science experiments). 
+
+
+### 3.7 Conditioning on Past Treatments and Past Outcomes to Control for Unmeasured Confounders
+
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 7.1$ illustrates the threat of unmeasured confounding. In "real world" studies this threat is ubiquitous. 
+
+@tbl-elementary-chronological-hyg $\mathcal{G} 7.2$ clarifies a response. With at least three repeated measurements, investigators may greatly reduce unmeasured confoudning by controlling for past-measurements of the treatment as well as past-measurements of the outcome. With such control, any unmeasured confounder would need to be orthogonal to its effects at baseline (refer to @vanderweele2020). Moreover, controlling for past treatments allows investigators to estimate an **incident exposure**, effect over **a prevelence expsoure effect.**   The prevalence exposure effect describes the effect of current or ongoing exposures on outcomes. This effects risks pointing to erroneous conclusions. The incident exposure targets initiation into treatment, which is typically the effect we obtain from experiments to obtain
+the incident exposure effect, we generally require that events in the data can be accurately classified into at least three relative time
+intervals (refer to @hernán2016; @danaei2012; @vanderweele2020; @bulbulia2022)
+
+
+
+
+## 3.8. Summary Part 3
+
+## Part 4  How Causal Directed Acyclic Graphs Clarify The Insufficiency of the Timing of Events Recorded in Data
+
+### 4.1. M-bias
+
+### 4.2  M-bias with where the pre-treatment collider is a confounder
+
+### 4.3  Opportunities for post-treatment conditioning for confounder control
+
+### 4.4  Residual Confounding After Conditioning on Past Treatments and Past Outcomes
+
+### 4.5  Intermediary Confounding in Causal Mediation
+
+### 4.6. Treatment Confounder Feedback in Dynamic Treatment Regimes
+
+### 4.7  Collider Stratification Bias in Dynamic Treatment Regimes. 
+
+### 4.8  Summary Part 4.
+
 
 
 ::: {#tbl-chronology-notenough}
