--- a/manuscripts/24-jb-dags/24-jb-dags.tex
+++ b/manuscripts/24-jb-dags/24-jb-dags.tex
@@ -210,7 +210,7 @@
       
 
 
-\date{2024-05-15}
+\date{2024-05-16}
 \begin{document}
 \maketitle
 \begin{abstract}
@@ -415,7 +415,7 @@ the expected or average outcomes under treatment and contrast conditions
 for a pre-specified population, typically the population from which an
 observed sample is drawn.
 
-Consider a binary treatment, \(A\) \in \{0,1\}\$:
+Consider a binary treatment, \(A \in \{0,1\}\)
 
 \[
 \text{Average Treatment Effect}  = \mathbb{E}[Y(1)] - \mathbb{E}[Y(0)].
@@ -451,28 +451,28 @@ rules out explanations for difference in treatment group average except
 the treatment. Put differently randomisation implies:
 
 \[
-\widehat{\mathbb{E}}[Y(0) | A = 1] = \widehat{\mathbb{E}}[Y(0) | A = 0]
+\mathbb{E}[Y(0) | A = 1] = \mathbb{E}[Y(0) | A = 0]
 \]
 
 and
 
 \[
-\widehat{\mathbb{E}}[Y(1) | A = 1] = \widehat{\mathbb{E}}[Y(1) | A = 0]
+\mathbb{E}[Y(1) | A = 1] = \mathbb{E}[Y(1) | A = 0]
 \]
 
 We assume, (by causal consistency, see: \(\S 1.2.1\)):
 
-\[\widehat{\mathbb{E}}[Y(1) | A = 1] = \widehat{\mathbb{E}}[Y| A = 1]\]
+\[ \mathbb{E}[Y(1) | A = 1] = \mathbb{E}[Y| A = 1]\]
 
 and
 
-\[\widehat{\mathbb{E}}[Y(0) | A = 0] = {\mathbb{E}}[Y| A = 0]\]
+\[\mathbb{E}[Y(0) | A = 0] = \mathbb{E}[Y| A = 0]\]
 
 It follows that the average treatment effect of the randomised
 experiment can be computed:
 
 \[
-\text{The Average Treatment Effect} = {\mathbb{E}}[Y | A = 1] - \widehat{\mathbb{E}}[Y | A = 0].
+\text{The Average Treatment Effect} = \widehat{\mathbb{E}}[Y | A = 1] - \widehat{\mathbb{E}}[Y | A = 0].
 \]
 
 There are four critical aspects for how ideally randomised experiments
@@ -576,7 +576,9 @@ individual at the observed exposure level. Although it seems
 straightforward to equate an individual's observed outcome with their
 counterfactual outcome, treatment conditions vary, and treatment
 heterogeneity poses considerable challenges for satisfying this
-assumption. See: \textbf{Appendix A}
+assumption. See: \textbf{Appendix A} for further discussion of how
+investigators may obtain statisfy causal consistency in real-world
+settings.
 
 \paragraph{1.2.2 Assumption 2:
 Positivity}\label{assumption-2-positivity}
@@ -612,21 +614,21 @@ individuals randomly sampled from the target population over three
 years. Suppose further that we wanted to estimate a one-year causal
 effect of weekly religious service attendance on charitable donations.
 We control for baseline attendance to recover an incident exposure
-effect estimate (see: \(\S 2.3\) and \textbf{Appendix 2}). Assume that
-the natural transition rate from no religious service attendance to
-weekly service attendance is low, say one in a thousand annually. In
-that case, the effective sample for the treatment condition dwindles to
-20. This example clarifies the problem. For rare exposures, the data
-required for valid causal contrasts may be sparse, even in large
-datasets. Where the positivity assumption is violated, causal diagrams
-will be of limited utility because observations in the data do not
-support valid causal inferences. (\textbf{Appendix 1} develops a worked
-example that illustrates the difficulty of satisfying this assumption in
-a setting of a cultural evolutionary question.)
+effect estimate. Assume that the natural transition rate from no
+religious service attendance to weekly service attendance is low, say
+one in a thousand annually. In that case, the effective sample for the
+treatment condition dwindles to 20. This example clarifies the problem.
+For rare exposures, the data required for valid causal contrasts may be
+sparse, even in large datasets. Where the positivity assumption is
+violated, causal diagrams will be of limited utility because
+observations in the data do not support valid causal inferences.
+(\textbf{Appendix B} presents a worked example that illustrates the
+difficulty of satisfying this assumption in a setting of a cultural
+evolutionary questions.)
 
-\paragraph{1.2.3 Assumption 3: Conditional Exchangeability (no
-unmeasured
-confounding)}\label{assumption-3-conditional-exchangeability-no-unmeasured-confounding}
+\paragraph{1.2.3 Assumption 3: Conditional Exchangeability (or no
+unmeasured confounding or conditional
+ignorability)}\label{assumption-3-conditional-exchangeability-or-no-unmeasured-confounding-or-conditional-ignorability}
 
 We satisfy the conditional exchangeability assumption if the treatment
 groups are conditionally balanced in the variables that could affect the
@@ -649,7 +651,7 @@ assumptions required for consistent causal inference also hold, we may
 compute the average treatment effect (ATE) on the difference scale:
 
 \[
-ATE = \mathbb{E}[Y(1) | L] - \mathbb{E}[Y(0) | L]
+\text{Average Treatment Effect} = \mathbb{E}[Y(1) | L] - \mathbb{E}[Y(0) | L]
 \]
 
 Note that in randomised controlled experiments, exchangeability is
@@ -658,12 +660,25 @@ pre-treatment variables may improve efficiency and diminish threats to
 randomisation from chance inbalances in measured covariates, it is a
 confusion to think of such adjustment as ``control.''
 
+In ``real-world'' observational studies, where measured confounders are
+sufficient to ensure conditional exchangeability, we obtain obtain
+estimates for the average treatment effect by conditioning on the
+densities of measured confounders by treatment group. Where \(A=a\) and
+\(A = a^*\) are the treatment levels we seek to contrast:
+
+\[
+\widehat{\text{ATE}} =  \sum_l \big( \mathbb{E}[Y(a^*) \mid L] - \mathbb{E}[Y(a) \mid L] \big) \times Pr(L)
+\]
+
+Which gives by causal consistency gives us: \[
+\widehat{\text{ATE}} =  \sum_l \big( \mathbb{E}[Y \mid A = a^*, L] - \mathbb{E}[Y \mid A = a, L] \big) \times Pr(L)
+\] \footnote{note}
+
 In the disciplines of cultural evolution, where experimental control is
 impractical and we are left with ``real-world'' data, obtaining
 consistent causal inferences hinge on the plausibility of satisfying
-this `no unmeasured confounding' assumption (see: \textbf{Appendix A}).
-In \textbf{Appendix B} I describe assumptions and wordlfows that occur
-downstream of these three fundamental assumptions of causal inference.
+this `no unmeasured confounding' assumption. In \textbf{Appendix B} I
+describe challenges for inferring causal effects from historical data.
 
 However these assumptions occur down stream from the primary functions
 of causal directed acyclic graphs, which we now ready to state:
@@ -705,8 +720,8 @@ assignment, conditional on measured confounders.
 
 \newpage{}
 
-\subsection{Part 2 Causal Directed Acyclic
-Graphs}\label{part-2-causal-directed-acyclic-graphs}
+\subsection{Part 2 Part 2: How Causal Directed Acyclic Graphs Clarify
+Identification}\label{part-2-part-2-how-causal-directed-acyclic-graphs-clarify-identification}
 
 We introduce causal directed acyclic graphs by describing the meaning of
 our symbols.
@@ -1077,41 +1092,40 @@ We further define the relations of \textbf{ancestor} and
 
 It follows that a node can have multiple ancestors and descendants.
 
-\paragraph{Bayesian Network Factorisation and The Local Markov
-Assumption}\label{bayesian-network-factorisation-and-the-local-markov-assumption}
+\paragraph{Markov Factorisation and The Local Markov
+Assumption}\label{markov-factorisation-and-the-local-markov-assumption}
 
 Pearl (\citeproc{ref-pearl2009a}{2009}) p 52 asks us to imagine the
-following. Suppose we have a distribution P defined on n discrete
-variables, \(X_1, X_2,  \dots, X_n\). By the chain rule, the joint
-distribution for variables \(X_1, X_2, \dots, X_n\) on graph can be
-decomposed into the product of \(n\) conditional distributions such
-that:
+following. Suppose we have a distribution \(\mathcal{P}\) defined on n
+discrete variables, \(X_1, X_2,  \dots, X_n\). By the chain rule, the
+joint distribution for variables \(X_1, X_2, \dots, X_n\) on graph can
+be decomposed into the product of \(n\) conditional distributions such
+that we may obtain the following factorisation:
 
 \[
-P(x_1, \dots, x_n) = \prod_{j=1}^n P(x_j \mid x_1, \dots, x_{j-1})
+\Pr(x_1, \dots, x_n) = \prod_{j=1}^n \Pr(x_j \mid x_1, \dots, x_{j-1})
 \]
 
-This factorisation of a graph is called Bayesian Network Factorisation.
 We translate nodes and edges on a graph into a set of conditional
-independences that a graph implies over the distributions represented in
-the notes on a graph.
+independences that a graph implies over statistical distributions.
 
 According to \textbf{the local Markov assumption,} given its parents in
 a directed acyclic graph, a node is said to be independent of all its
-non-descendants:
+non-descendants. Under this assumption we obtain what Pearl calls
+Bayesian network factorisation, such that:
 
 \[
-P(x_j \mid x_1, \dots, x_{j-1}) = P(x_j \mid \text{pa}_j)
+\Pr(x_j \mid x_1, \dots, x_{j-1}) = \Pr(x_j \mid \text{pa}_j)
 \]
 
-This factorisation simplifies the calculation of the joint distributions
-encoded in the directed acyclic graph (causal or non-causal) by reducing
-complex factorisations of the conditional distributions in \(P\) to
-simpler conditional distributions in the set \(\text{PA}_j\),
-represented in the structural elements of a directed acyclic graph
-(\citeproc{ref-lauritzen1990}{Lauritzen \emph{et al.} 1990};
-\citeproc{ref-pearl1988}{Pearl 1988}, \citeproc{ref-pearl1995}{1995},
-\citeproc{ref-pearl2009a}{2009}).
+This factorisation greatly simplifies the calculation of the joint
+distributions encoded in the directed acyclic graph (causal or
+non-causal) by reducing complex factorisations of the conditional
+distributions in \(\mathcal{P}\) to simpler conditional distributions in
+the set \(\text{PA}_j\), represented in the structural elements of a
+directed acyclic graph (\citeproc{ref-lauritzen1990}{Lauritzen \emph{et
+al.} 1990}; \citeproc{ref-pearl1988}{Pearl 1988},
+\citeproc{ref-pearl1995}{1995}, \citeproc{ref-pearl2009a}{2009}).
 
 \paragraph{Minimality Assumption}\label{minimality-assumption}
 
@@ -1144,15 +1158,15 @@ we typically assume compatibility rather than empirically proving it
 
 \paragraph{Faithfulness}\label{faithfulness}
 
-\textbf{Faithfulness} complements the local Markov assumption and
-Bayesian Network factorisation in causal diagrams. A causal diagram is
-considered faithful to a given set of data if all the conditional
-independencies present in the data are accurately depicted in the graph.
-Conversely, the graph is faithful if every dependency implied by the
-graph's structure can be observed in the data
-(\citeproc{ref-hernan2024}{\textbf{hernan2024?}}). This concept ensures
-that the graphical representation of relationships between variables
-aligns with empirical evidence (\citeproc{ref-pearl2009a}{Pearl 2009}).
+\textbf{Faithfulness} complements Markov Factorisation in causal
+diagrams. A causal diagram is considered faithful to a given set of data
+if all the conditional independencies present in the data are accurately
+depicted in the graph. Conversely, the graph is faithful if every
+dependency implied by the graph's structure can be observed in the data
+(\citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024}). This concept
+ensures that the graphical representation of relationships between
+variables aligns with empirical evidence
+(\citeproc{ref-pearl2009a}{Pearl 2009}).
 
 The distinction between \textbf{weak faithfulness} and \textbf{strong
 faithfulness} addresses the nature of observed independencies:
@@ -1219,7 +1233,7 @@ According to these rules:
   The node of common effect is called a \emph{collider}.
 \item
   Conditioning on a collider does not block a path, such that
-  \(A \rightarrowred \boxed{B} \leftarrowred C\)may suggest an
+  \(A \rightarrowred \boxed{B} \leftarrowred C\) may suggest an
   association of \(A\) with \(C\) in the absence of causation.
 \item
   Conditioning on a descendant of a collider does not block a path, such
@@ -1228,50 +1242,70 @@ According to these rules:
 \item
   If a path does not contain a collider, any variable conditioned along
   the path is blocked, such that
-  \(A \rightarrowdotted \boxed{B} \rightarrowdotted C\)blocks the path
-  from \(A \rightarrowdotted C\)(\citeproc{ref-hernan2023}{Hernan and
+  \(A \rightarrowdotted \boxed{B} \rightarrowdotted C\) blocks the path
+  from \(A \rightarrowdotted C\) (\citeproc{ref-hernan2023}{Hernan and
   Robins 2023 p. 78}).
 \end{enumerate}
 
-\paragraph{The Backdoor Path
-Criterion}\label{the-backdoor-path-criterion}
+\paragraph{2.6 The Backdoor Path Criterion and Backdoor Path
+Adjustment}\label{the-backdoor-path-criterion-and-backdoor-path-adjustment}
 
-To obtain an unbiased estimate for the causal effect of \(A\)on \(C\),
+To obtain an unbiased estimate for the causal effect of \(A\) on \(C\),
 we need to block all backdoor paths. We do this by conditioning on a set
 of covariates \(B\)that is sufficient to close all backdoor paths
 linking \(A\)and \(C\). A path is effectively blocked by \(B\)if it
 includes at least one non-collider that is a member of \(B\), or if it
 does not contain any collider or descendants of a collider.
 
-Pearl defines this criterion more generally as follows: a set of
-variables \(Z\) satisfies the backdoor criterion relative to variables
-\(X_i\)and \(X_j\) in a causal directed acyclic graph \(\mathcal{G}\)
-if:
+Pearl (\citeproc{ref-pearl2009a}{2009}) (p.173) defines this criterion
+more generally as follows: a set of variables \(Z\) satisfies the
+backdoor criterion relative to variables \(X_i\) and \(X_j\) in a causal
+directed acyclic graph \(\mathcal{G}\) if:
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  No node in \(Z\) is a descendant of \(X_i\); and
+  No node in \(Z\) is a descendant of \(X_i\).
 \item
-  \(Z\) blocks every path between \(X_i\)and \(X_j\)that contains an
-  arrow into \(X_i\).
+  \(Z\) blocks every path between \(X_i\) and \(X_j\) that includes an
+  arrow pointing into \(X_i\).
 \end{enumerate}
 
-Similarly, if \(X\)and \(Y\) are two disjoint subsets of nodes in
-\(\mathcal{G}\), then \(Z\) satisfies the backdoor criterion relative to
-\((X, Y)\) if it satisfies the criterion relative to any pair
-\((X_i, X_j)\) such that \(X_i \in X\) and \(X_j \in Y\). The name
-``backdoor'' refers to condition (2), which requires that only paths
-with arrows pointing at \(X_i\) be blocked; these paths can be viewed as
-entering \(X_i\) through the back door.
+Furthermore, we say that if \(X\) and \(Y\) are two disjoint subsets of
+nodes in \(\mathcal{G}\), then \(Z\) meets the backdoor criterion
+relative to \((X, Y)\) if it meets the criteria for any pair
+\((X_i, X_j)\) where \(X_i \in X\) and \(X_j \in Y\)
+((\citeproc{ref-pear2009a}{\textbf{pear2009a?}}), p 173).
+
+The name ``backdoor'' refers to condition (2), which requires that only
+paths with arrows pointing at \(X_i\) be blocked; these paths can be
+viewed as entering \(X_i\) through the back door.
 
 The backdoor criterion uses the rules of d-separation to identify and
 block all paths in a causal diagram that could introduce bias between a
 treatment (or exposure), \(A\), and an outcome, \(C\), in the absence of
-causation (\citeproc{ref-pearl2009a}{Pearl 2009}).
+causation (\citeproc{ref-pearl2009a}{Pearl 2009 p. p173}).
 
-\paragraph{Frontdoor Path Criterion}\label{frontdoor-path-criterion}
+The backdoor path criterion gives rise to the ``backdoor path
+adjustment'' theorem, such that if a set of variables \(Z\) satisfies
+the backdoor criterion relative to \((X, Y)\) the causal effect of \(X\)
+on \(Y\) is identifiable given the formula:
+
+\[ \Pr(y|\hat{x}) = \sum_z \Pr(y|x,z) \times \Pr(z))\]
+
+Pearl's backdoor path adjustment theorem should look familiar.
+Substituting our notation where \(A\) is the treatment (a random
+variable) and \(L\) denotes measured confounders sufficient to for
+ignorable treatment assigment (also random variables), we may compute
+causal contrasts using Pearl's backdoor path adjustment theorem using
+the standardisation formula:
+
+\[
+\widehat{\text{ATE}} =  \sum_l \big( \mathbb{E}[Y \mid A = a^*, L] - \mathbb{E}[Y \mid A = a, L] \big) \times Pr(L)
+\] \footnote{note}
+
+\paragraph{2.7 Frontdoor Path Criterion}\label{frontdoor-path-criterion}
 
 To obtain an unbiased estimate for the causal effect of \(A\) on \(C\)
 using the frontdoor criterion, we need to identify a set of variables
@@ -1307,7 +1341,7 @@ mediator that fully captures the causal effect
 (\citeproc{ref-pearl2009a}{Pearl 2009}). Here, we state the frontdoor
 path criterion for completeness.
 
-\subsubsection{2.6 Comment on Pearl's Do-Calculus versus the Potential
+\subsubsection{2.8 Comment on Pearl's Do-Calculus versus the Potential
 Outcomes
 Framework}\label{comment-on-pearls-do-calculus-versus-the-potential-outcomes-framework}
 
@@ -1343,7 +1377,7 @@ conditional independences of potential outcomes on graphs
 (\citeproc{ref-richardson2013swigsprimer}{Richardson and Robins 2013b}),
 which can be useful.
 
-\#\#\# 2.7 The Five Elementary Structures of Causality Encoded In Causal
+\#\#\# 2.9 The Five Elementary Structures of Causality Encoded In Causal
 Directed Acyclic Graphs
 
 \begin{table}
@@ -1420,7 +1454,7 @@ conditional on measured co-variates, so that \(Y(a) \coprod A \mid L\).
 
 \newpage{}
 
-\subsubsection{2.8 The Five Fundamental Rules of Confounding
+\subsubsection{2.10 The Five Fundamental Rules of Confounding
 Control}\label{the-five-fundamental-rules-of-confounding-control}
 
 Table~\ref{tbl-terminologyconfounders} describe five elementary rules of
@@ -1528,11 +1562,43 @@ loops as sequential events.
 
 \newpage{}
 
-\subsection{Part 3. Use Cases}\label{part-3.-use-cases}
+\subsubsection{Summary Part 2}\label{summary-part-2}
 
-\subsubsection{3.1 Direct Acyclic Graphs Reveal The Importance of Timing
-for
-Identification}\label{direct-acyclic-graphs-reveal-the-importance-of-timing-for-identification}
+We use causal directed acyclic graphs to represent and evalaute
+structural sources of bias. We do not use these causal graphs to
+represent the the entirity of the causal system in which we are
+interested, but rather only those features necessary to evaluate
+conditional exchangeabilty, or equivalently to evaluate d-separation.
+Moreover, causal directed acyclic graphs should not be confused with the
+structural equation models employed in the statistical structural
+equation modelling traditions. Although Pearl's formalism is built upon
+``Non-Parametric Structural Equation Models'', the term ``Structural
+Equation Model'' is a false cognate. Causal graphs are structural
+models, not statistical models. We create causal graphs before we embark
+on statistical modelling. Their purpose is to clarify how to write
+statistical models by eludicating which variables we must include in our
+statistical models and equally important, which variables we must
+exclude from our statistical models to avoid invalidating our causal
+inferences. All causal graph are grounded in our assumptions about the
+structures of causation. Although it is sometimes possible to use causal
+diagrams for causal discovery, their primary (and original) use is to
+evaluate the implications of assumptions.
+
+This distinction between structural and statistical models is
+fundamental because absent clearly defined causal contrasts and
+carefully evaluated assumptions about structural sources of bias, the
+statistical structural equation modelling tradition offers no guarantees
+that the coefficients investigators recover are interpretable.
+Misunderstanding this difference between structural and statistical
+models has led to considerable confusion across the human sciences
+(\citeproc{ref-bulbulia2022}{Bulbulia 2022}.;
+\citeproc{ref-vanderweele2015}{VanderWeele 2015};
+\citeproc{ref-vanderweele2022}{VanderWeele 2022};
+\citeproc{ref-vanderweele2022b}{VanderWeele and Vansteelandt 2022})
+
+\subsection{Part 3. How Causal Directed Acyclic Graphs Clarify The
+Importance of Timing of Events Recorded in
+Data}\label{part-3.-how-causal-directed-acyclic-graphs-clarify-the-importance-of-timing-of-events-recorded-in-data}
 
 \begin{table}
 
@@ -1554,8 +1620,181 @@ the occurance of the variables whose structural features a causal
 directed acyclic graph encodes. We begin by consider seven examples of
 confounding problems resolved when such accuracy is ensured.
 
-\subsection{3.2 Collecting Time Series Data is Insufficient for
-Identification}\label{collecting-time-series-data-is-insufficient-for-identification}
+The first seven case-studies illustrate the focus that causal directed
+acyclic graphs bring to fundmental imperative to ensure accurate timing
+in the chronology of events recorded in data. These illustrations refer
+to causal graph in Table~\ref{tbl-elementary-chronological-hyg}
+
+\subsubsection{3.1 Reverse Causation}\label{reverse-causation}
+
+\subsubsection{3.2 Confounding by Common
+Cause}\label{confounding-by-common-cause}
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 3.1\)
+illustrates confounding by common cause. Suppose there is a common
+cause, \(L\), of the exposure, \(A\), and outcome, \(Y\). In this
+setting, \(L\) may create a statistical association between \(A\) and
+\(Y\), implying causation in its absence. Most human scientists will be
+familiar of the threat to inference in this setting: a ``third
+variable'' leads to association without causation.
+
+Consider an example where smoking, \(L\), is a common cause of both
+yellow fingers, \(A\), and cancer, \(Y\). Here, \(A\) and \(Y\) may show
+an association without causation. If investigators were to scrub the
+hands of smokers, this would not affect cancer rates.
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 3.2\)
+clarifies a response. Condition on the common cause. Were investigators
+to condition on smoking, there would be no association between yellow
+fingers and cancer.
+
+\subsubsection{3.3 Mediator Bias}\label{mediator-bias}
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 3.1\)
+illustrates mediator bias. Conditioning on the effect of a treatment in
+this graph partially blocks the flow of information from treatment to
+outcome, biasing the total effect estimate.
+
+Suppose investigators are interested in whether cultural `beliefs in big
+Gods' \(A\) affect social complexity \(Y\). Suppose that `economic
+trade', \(L\) is both a common cause of the treatment and outcome. To
+address confounding by common cause we must condition on economic trade.
+However, timing matters. If we condition on measurements that reflect
+economic trade after the emergence of beliefs in big Gods, we may bias
+our total effect estimate.
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 3.2\)
+clarifies a response. Ensure that measurements of economic trade are
+obtained for cultural histories before big-Gods arise. Do not condition
+on post-treatment instances of economic trade.
+
+\subsubsection{3.4 Collider Bias}\label{collider-bias}
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 4.1\)
+illustrates collider bias. Imagine a randomised experiment investigating
+the effects of different settings on individuals' self-rated health. In
+this study, participants are assigned to either civic settings (e.g.,
+community centres) or religious settings (e.g., places of worship). The
+exposure of interest, \(A\), is the type of setting, and the outcome,
+\(Y\), is self-rated health. Suppose there is no effect of setting on
+self-rated health. However, suppose both setting and rated health
+independently influence a third variable: cooperativeness. Specifically,
+imagine religious settings encourage cooperative behaviour, and at the
+same time, individuals with better self-rated health are more likely to
+engage cooperatively. Now suppose the investigators decide to condition
+on cooperativeness, which in reality is the common effect of an \(A\),
+and the outcome \(Y\). Their rational might be to study the effects of
+setting on health among those who are more cooperative, or perhaps to
+`control for' cooperation in the health effects of religious setting. By
+introducing such `control' the investigators would inadvertently
+introduce collider bias, because the control variable is a common effect
+of the exposure and the outcome.
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 4.2\)
+clarifies a response. If the worry is that cooperativeness is a
+confounder, ensure that cooperativeness is measured before the intiation
+of exposures to religious settings. Note that in experimental settings
+investigators do not have this worry, assuming randomisation succeeds
+and samples are large. However, conditioning on a variable that is
+associated with the outcome may improve estimation efficiency, and
+safegaurds against random imbalance owing to sampling variability.
+
+\subsubsection{3.5 Collider Proxy Bias}\label{collider-proxy-bias}
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 5.1\)
+illustrates bias from conditioning on the proxy of a collider. Consider
+again the scenario described in \(\sec 3.4\), however in place of
+controlling for cooperativeness investigators control for charitable
+donations, a proxy for cooperativeness. Here, because the control
+variable is a decendant of a collider, conditioning on the proxy is akin
+to conditioning on the the collider.
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 5.2\)
+clarifies a response. Do not condition on the effect of treatment.
+
+\subsubsection{3.6 Post-Treatment Collider Stratification
+Bias}\label{post-treatment-collider-stratification-bias}
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 6.1\)
+illustrates post-treatment collider stratification bias. Consider a gain
+an experiment investigating the effect of religious service on
+self-rated health. Suppose we measure ``religiosity'' after the
+experiment, although with other demographic data. Suppose further that
+religious setting affects religiosity, as does an unmeasured confounder,
+such as child-hood deprivation. Suppose that childhood deprivation
+affects self-reported health. Although our experiment ensured
+randomisation of the treatment, and therefore ensured there
+no-unmeasured common cause of the treatment and outcome, conditioning on
+the post-treatment variable ``religiosity'' opens a back-door path from
+the treatment to the outcome. This path is
+\(A_0 \association L_1 \association U \association Y_2\). We introduced
+confounding into our randomised experiment.
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 6.2\)
+clarifies a response. Do not condition on a variable that the treatment
+may effect. (refer to Cole \emph{et al.} (\citeproc{ref-cole2010}{2010})
+for theoretical examples; refer to Montgomery \emph{et al.}
+(\citeproc{ref-montgomery2018}{2018}) for evidence of widespread
+prevalence of post-treatment adjustment in political science
+experiments).
+
+\subsubsection{3.7 Conditioning on Past Treatments and Past Outcomes to
+Control for Unmeasured
+Confounders}\label{conditioning-on-past-treatments-and-past-outcomes-to-control-for-unmeasured-confounders}
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 7.1\)
+illustrates the threat of unmeasured confounding. In ``real world''
+studies this threat is ubiquitous.
+
+Table~\ref{tbl-elementary-chronological-hyg} \(\mathcal{G} 7.2\)
+clarifies a response. With at least three repeated measurements,
+investigators may greatly reduce unmeasured confoudning by controlling
+for past-measurements of the treatment as well as past-measurements of
+the outcome. With such control, any unmeasured confounder would need to
+be orthogonal to its effects at baseline (refer to VanderWeele \emph{et
+al.} (\citeproc{ref-vanderweele2020}{2020})). Moreover, controlling for
+past treatments allows investigators to estimate an \textbf{incident
+exposure}, effect over \textbf{a prevelence expsoure effect.} The
+prevalence exposure effect describes the effect of current or ongoing
+exposures on outcomes. This effects risks pointing to erroneous
+conclusions. The incident exposure targets initiation into treatment,
+which is typically the effect we obtain from experiments to obtain the
+incident exposure effect, we generally require that events in the data
+can be accurately classified into at least three relative time intervals
+(refer to Hernán \emph{et al.} (\citeproc{ref-hernuxe1n2016}{2016});
+Danaei \emph{et al.} (\citeproc{ref-danaei2012}{2012}); VanderWeele
+\emph{et al.} (\citeproc{ref-vanderweele2020}{2020}); Bulbulia
+(\citeproc{ref-bulbulia2022}{2022}))
+
+\subsection{3.8. Summary Part 3}\label{summary-part-3}
+
+\subsection{Part 4 How Causal Directed Acyclic Graphs Clarify The
+Insufficiency of the Timing of Events Recorded in
+Data}\label{part-4-how-causal-directed-acyclic-graphs-clarify-the-insufficiency-of-the-timing-of-events-recorded-in-data}
+
+\subsubsection{4.1. M-bias}\label{m-bias}
+
+\subsubsection{4.2 M-bias with where the pre-treatment collider is a
+confounder}\label{m-bias-with-where-the-pre-treatment-collider-is-a-confounder}
+
+\subsubsection{4.3 Opportunities for post-treatment conditioning for
+confounder
+control}\label{opportunities-for-post-treatment-conditioning-for-confounder-control}
+
+\subsubsection{4.4 Residual Confounding After Conditioning on Past
+Treatments and Past
+Outcomes}\label{residual-confounding-after-conditioning-on-past-treatments-and-past-outcomes}
+
+\subsubsection{4.5 Intermediary Confounding in Causal
+Mediation}\label{intermediary-confounding-in-causal-mediation}
+
+\subsubsection{4.6. Treatment Confounder Feedback in Dynamic Treatment
+Regimes}\label{treatment-confounder-feedback-in-dynamic-treatment-regimes}
+
+\subsubsection{4.7 Collider Stratification Bias in Dynamic Treatment
+Regimes.}\label{collider-stratification-bias-in-dynamic-treatment-regimes.}
+
+\subsubsection{4.8 Summary Part 4.}\label{summary-part-4.}
 
 \begin{table}
 
@@ -2324,9 +2563,27 @@ Bulbulia, J (2024) A practical guide to causal inference in three-wave
 panel studies. \emph{PsyArXiv Preprints}.
 doi:\href{https://doi.org/10.31234/osf.io/uyg3d}{10.31234/osf.io/uyg3d}.
 
+\bibitem[\citeproctext]{ref-bulbulia2022}
+Bulbulia, JA (2022) A workflow for causal inference in cross-cultural
+psychology. \emph{Religion, Brain \& Behavior}, \textbf{0}(0), 1--16.
+doi:\href{https://doi.org/10.1080/2153599X.2022.2070245}{10.1080/2153599X.2022.2070245}.
+
 \bibitem[\citeproctext]{ref-bulbulia2023}
 Bulbulia, JA (2023) Causal diagrams (directed acyclic graphs): A
 practical guide.
+
+\bibitem[\citeproctext]{ref-cole2010}
+Cole, SR, Platt, RW, Schisterman, EF, \ldots{} Poole, C (2010)
+Illustrating bias due to conditioning on a collider. \emph{International
+Journal of Epidemiology}, \textbf{39}(2), 417--420.
+doi:\href{https://doi.org/10.1093/ije/dyp334}{10.1093/ije/dyp334}.
+
+\bibitem[\citeproctext]{ref-danaei2012}
+Danaei, G, Tavakkoli, M, and Hernán, MA (2012) Bias in observational
+studies of prevalent users: lessons for comparative effectiveness
+research from a meta-analysis of statins. \emph{American Journal of
+Epidemiology}, \textbf{175}(4), 250--262.
+doi:\href{https://doi.org/10.1093/aje/kwr301}{10.1093/aje/kwr301}.
 
 \bibitem[\citeproctext]{ref-diaz2021nonparametric}
 Dı́az, I, Hejazi, NS, Rudolph, KE, and Der Laan, MJ van (2021)
@@ -2347,6 +2604,11 @@ confounding vs collider-stratification bias. \emph{Epidemiology},
 Hernan, MA, and Robins, JM (2023) \emph{Causal inference}, Taylor \&
 Francis. Retrieved from
 \url{https://books.google.co.nz/books?id=/_KnHIAAACAAJ}
+
+\bibitem[\citeproctext]{ref-hernan2024WHATIF}
+Hernan, MA, and Robins, JM (2024) \emph{Causal inference: What if?},
+Taylor \& Francis. Retrieved from
+\url{https://www.hsph.harvard.edu/miguel-hernan/causal-inference-book/}
 
 \bibitem[\citeproctext]{ref-hernuxe1n2008a}
 Hernán, MA, Alonso, A, Logan, R, \ldots{} Robins, JM (2008)
@@ -2488,6 +2750,27 @@ Stuart, EA, Ackerman, B, and Westreich, D (2018) Generalizability of
 randomized trial results to target populations: Design and analysis
 possibilities. \emph{Research on Social Work Practice}, \textbf{28}(5),
 532--537.
+
+\bibitem[\citeproctext]{ref-vanderweele2015}
+VanderWeele, TJ (2015) \emph{Explanation in causal inference: Methods
+for mediation and interaction}, Oxford University Press.
+
+\bibitem[\citeproctext]{ref-vanderweele2022}
+VanderWeele, TJ (2022) Constructed measures and causal inference:
+Towards a new model of measurement for psychosocial constructs.
+\emph{Epidemiology}, \textbf{33}(1), 141.
+doi:\href{https://doi.org/10.1097/EDE.0000000000001434}{10.1097/EDE.0000000000001434}.
+
+\bibitem[\citeproctext]{ref-vanderweele2020}
+VanderWeele, TJ, Mathur, MB, and Chen, Y (2020) Outcome-wide
+longitudinal designs for causal inference: A new template for empirical
+studies. \emph{Statistical Science}, \textbf{35}(3), 437--466.
+
+\bibitem[\citeproctext]{ref-vanderweele2022b}
+VanderWeele, TJ, and Vansteelandt, S (2022) A statistical test to reject
+the structural interpretation of a latent factor model. \emph{Journal of
+the Royal Statistical Society Series B: Statistical Methodology},
+\textbf{84}(5), 2032--2054.
 
 \bibitem[\citeproctext]{ref-webster2021directed}
 Webster-Clark, M, and Breskin, A (2021) Directed acyclic graphs, effect
